k8s/apps/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: post-ingress-rule
  namespace: postapp  
  annotations:
    kubernetes.io/ingress.class: nginx
spec:  
  rules:
  -host: example.com
  http:
    paths:
    - path: /
      pathType: Prefix  
      backend:
        service:
          name: react-board-service
          port:
            number: 80
    - path: /api          
      pathType: Prefix  
      backend:
        service:
          name: post-service
          port:
            number: 8080
